# qwensay

./: .gitignore  README.md  pyproject.toml  qwensay.py
