[project]
name = "qwensay"
version = "0.1.0"
description = "Command line tool for text-to-speech synthesis using Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qwen-tts>=0.1.1",
    "torch>=2.11.0",
]

[tool.uv]
torch-backend = "cpu"

[project.optional-dependencies]
gpu = ["flash-attn"]
