[project]
name = "qwensay"
version = "0.1.0"
description = "Command line tool for text-to-speech synthesis using Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qwen-tts>=0.1.1",
    "torch>=2.1.0",
    "soundfile",
]

[project.scripts]
qwensay = "qwensay:main"


[project.optional-dependencies]
# This defines the "choice" for the user
gpu = ["flash-attn"]

[tool.uv]
package = true
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch", "setuptools", "wheel"]
